cluster/apps/security/kguardian/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kguardian-ui-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kguardian-ui
  oidc:
    provider:
      issuer: "https://sso.${S_HOMEPROD_DOMAIN}/application/o/gateway/"
    clientID: "8lRVJAKvaAvnGZVcrSVtFbMkmpLBQoauOi0fOuAZ"
    clientSecret:
      name: envoy-oidc-secret
    redirectURL: "https://kguardian.${S_HOMEPROD_DOMAIN}/oauth2/callback"
    logoutPath: /oauth2/logout
    cookieDomain: "${S_HOMEPROD_DOMAIN}"
